Fixed layout bug

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -15,6 +15,7 @@ main {
 		align-items: center;
 		justify-content: center;
 		width: 70%;
+		height: 100%;
 		gap: 5rem;
 
 		.section-title {
